CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(dfg_apa_common)

INCLUDE(${BUILD_SCRIPT_ROOT}/cmake/common.cmake)
INCLUDE_DIRECTORIES(
    include/apa_common
    include
    )
# LINK_DIRECTORIES(lib)

ADD_SUBDIRECTORY(src)
# ADD_SUBDIRECTORY(test)

# INSTALL(DIRECTORY include/apa_common DESTINATION ${INSTALL_INCLUDE_DIR})
