AUX_SOURCE_DIRECTORY (. SRC_LIST)
IF(BUILD_SHARED_LIBS)
    ADD_LIBRARY(gtctimer SHARED ${SRC_LIST})
ELSE()
    ADD_LIBRARY(gtctimer STATIC ${SRC_LIST})
ENDIF()

IF(WITH_FPGA_ACCELERATE)
    TARGET_LINK_LIBRARIES(gtctimer)
ELSE()
   IF(WITH_DEBUG)
    TARGET_LINK_LIBRARIES(gtctimer)
   ELSE()
    TARGET_LINK_LIBRARIES(gtctimer)
   ENDIF()
ENDIF()

