AUX_SOURCE_DIRECTORY(. SRC_LIST)

IF (WIN32)
    AUX_SOURCE_DIRECTORY(compatible COMPATIBLE_SRC_LIST)
    ADD_LIBRARY(base ${LIBS_TYPE} ${SRC_LIST} ${COMPATIBLE_SRC_LIST})
ELSE ()
    ADD_LIBRARY(base ${LIBS_TYPE} ${SRC_LIST})
    #ADD_LIBRARY(base_shared SHARED ${SRC_LIST})
    #SET_TARGET_PROPERTIES(base_shared PROPERTIES OUTPUT_NAME "base")
ENDIF ()

INCLUDE_DIRECTORIES(${PROJECT_ROOT_PATH})
