IF (WIN32)

    CMAKE_MINIMUM_REQUIRED(VERSION 2.8.2)
    PROJECT(can_io_tool)

    ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
    ADD_DEFINITIONS(/D _CRT_SECURE_NO_WARNINGS)

    MESSAGE(STATUS "${CMAKE_SOURCE_DIR}")
    SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
    SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib/")

    INCLUDE_DIRECTORIES("..")

    LINK_DIRECTORIES("../can_io")

    AUX_SOURCE_DIRECTORY(../can_dbc DBC_SRC_LIST)

    ADD_LIBRARY(can_dbc ${LIBS_TYPE} ${DBC_SRC_LIST})

    AUX_SOURCE_DIRECTORY(. SRC_LIST)

    # test
    ADD_EXECUTABLE(can_io_tool ${SRC_LIST})
    TARGET_LINK_LIBRARIES(can_io_tool can_dbc ControlCAN)
ENDIF ()
