AUX_SOURCE_DIRECTORY (. SRC_LIST)
IF(BUILD_SHARED_LIBS)
    ADD_LIBRARY(ApaJsonReader SHARED ${SRC_LIST})
ELSE()
    ADD_LIBRARY(ApaJsonReader STATIC ${SRC_LIST})
ENDIF()

IF(WITH_FPGA_ACCELERATE)
    TARGET_LINK_LIBRARIES(ApaJsonReader)
ELSE()
   IF(WITH_DEBUG)
    TARGET_LINK_LIBRARIES(ApaJsonReader)
   ELSE()
    TARGET_LINK_LIBRARIES(ApaJsonReader)
   ENDIF()
ENDIF()

# INSTALL(TARGETS ApaJsonReader DESTINATION ${INSTALL_LIB_DIR})
