AUX_SOURCE_DIRECTORY (. SRC_LIST)
IF(BUILD_SHARED_LIBS)
    ADD_LIBRARY(ApaLogReader SHARED ${SRC_LIST})
ELSE()
    ADD_LIBRARY(ApaLogReader STATIC ${SRC_LIST})
ENDIF()

IF(WITH_FPGA_ACCELERATE)
    TARGET_LINK_LIBRARIES(ApaLogReader)
ELSE()
   IF(WITH_DEBUG)
    TARGET_LINK_LIBRARIES(ApaLogReader)
   ELSE()
    TARGET_LINK_LIBRARIES(ApaLogReader)
   ENDIF()
ENDIF()

# INSTALL(TARGETS ApaLogReader DESTINATION ${INSTALL_LIB_DIR})
