AUX_SOURCE_DIRECTORY (. SRC_LIST)
IF(BUILD_SHARED_LIBS)
    ADD_LIBRARY(ApaSimLogReader SHARED ${SRC_LIST})
ELSE()
    ADD_LIBRARY(ApaSimLogReader STATIC ${SRC_LIST})
ENDIF()

IF(WITH_FPGA_ACCELERATE)
    TARGET_LINK_LIBRARIES(ApaSimLogReader)
ELSE()
   IF(WITH_DEBUG)
    TARGET_LINK_LIBRARIES(ApaSimLogReader)
   ELSE()
    TARGET_LINK_LIBRARIES(ApaSimLogReader)
   ENDIF()
ENDIF()

# INSTALL(TARGETS ApaSimLogReader DESTINATION ${INSTALL_LIB_DIR})
